Se ajustaron los cambios hechos en la base de datos y que quito es uso de la columna Rol de Usuario